<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym_colleague_menubg_2nd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bg_3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/anton"
            android:text="@string/warm_up_day1"
            android:textColor="#FFEB3B"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/warmupex1"
            android:textColor="#FFEB3B"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="monospace"
            android:text="@string/warmupex1_no"
            android:textColor="#FFEB3B"
            android:textSize="20sp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="299dp"
            android:layout_height="211dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/warm_up_no2">

        </pl.droidsonroids.gif.GifImageView>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"

            android:fontFamily="@font/archivo_black"
            android:text="@string/warmupex2"
            android:textColor="#FFEB3B"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"

            android:fontFamily="monospace"
            android:text="@string/warmupex2_no"
            android:textColor="#FFEB3B"
            android:textSize="20sp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="299dp"
            android:layout_height="211dp"
            android:layout_marginStart="30dp"

            android:src="@drawable/ex2">

        </pl.droidsonroids.gif.GifImageView>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"

            android:fontFamily="@font/archivo_black"
            android:text="@string/warmupex3"
            android:textColor="#FFEB3B"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"

            android:fontFamily="monospace"
            android:text="@string/warmupex3_no"
            android:textColor="#FFEB3B"
            android:textSize="20sp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="299dp"
            android:layout_height="211dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ex4">

        </pl.droidsonroids.gif.GifImageView>
    </LinearLayout>

</ScrollView>