<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym_colleague_menubg_2nd"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="331dp"
        android:layout_height="25dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="200dp"
        android:text="@string/welcome_quote"
        android:textColor="#F1EC40"
        android:textStyle="bold"
        app:fontFamily="@font/adamina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="319dp"
        android:layout_height="116dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginEnd="269dp"
        android:layout_marginRight="269dp"
        android:layout_marginBottom="256dp"
        android:text="@string/welcome_des"
        android:textColor="#F1EC40"
        android:textSize="13sp"
        android:textStyle="bold"
        app:fontFamily="@font/adamina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="144dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="175dp"
        android:layout_marginRight="175dp"
        android:text="@string/welcome"
        android:textColor="#F1EC40"
        android:textSize="30sp"
        app:fontFamily="@font/adamina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="352dp"
        android:layout_height="208dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gym_colleague_icon_without_bg1_removebg_preview" />

    <Button
        android:id="@+id/start_workout"
        android:layout_width="310dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/rounded_button"
        android:text="@string/start_workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>