<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym_colleague_menubg_2nd"
    android:scrollbars="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="43dp"
            android:layout_marginBottom="32dp"
            android:text="@string/workout_chart"
            android:textColor="#FFEB3B"
            android:textSize="30sp"
            app:fontFamily="@font/anton"
            app:layout_constraintBottom_toTopOf="@+id/warmup_scr_b1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/warmup_scr_b1"
            android:onClick="openChest"
            android:layout_width="332dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_buttons_of_inner_act"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/day_1_workout"
            android:textSize="22sp"
            app:fontFamily="@font/archivo_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/warmup_scr_b2"
            android:onClick="openBiceps"
            android:layout_width="332dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_buttons_of_inner_act"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/day_2_workout"
            android:textSize="22sp"
            app:fontFamily="@font/archivo_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/warmup_scr_b3"
            android:onClick="openTriceps"
            android:layout_width="332dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_buttons_of_inner_act"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/day_3_workout"
            android:textSize="22sp"
            app:fontFamily="@font/archivo_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/warmup_scr_b4"
            android:layout_width="332dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_buttons_of_inner_act"
            android:gravity="left"
            android:onClick="openShoulders"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/day_4_workout"
            android:textSize="22sp"
            app:fontFamily="@font/archivo_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/warmup_scr_b5"
            android:layout_width="332dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_buttons_of_inner_act"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/day_5_workout"
            android:textSize="22sp"
            app:fontFamily="@font/archivo_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/warmup_scr_b6"
            android:layout_width="332dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_buttons_of_inner_act"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/day_6_workout"
            android:textSize="22sp"
            app:fontFamily="@font/archivo_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/warmup_scr_b7"
            android:layout_width="332dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_buttons_of_inner_act"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/day_7_workout"
            android:textSize="22sp"
            app:fontFamily="@font/archivo_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </LinearLayout>
</ScrollView>