<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym_colleague_menubg_2nd"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/quick_start_warmup"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/anton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_scr_b1"
        android:layout_width="311dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/bottons_of_main_screen"
        android:includeFontPadding="true"
        android:text="@string/warm_up_chart"
        android:textSize="22sp"
        app:fontFamily="@font/archivo_black"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="openWarmupActivity"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/main_scr_b2"
        android:layout_width="314dp"
        android:layout_height="68dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bottons_of_main_screen"
        android:text="@string/goto_workouts"
        android:textSize="22sp"
        app:fontFamily="@font/archivo_black"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="openWrokoutActivity"
        app:layout_constraintTop_toBottomOf="@+id/main_scr_b1" />

    <Button
        android:id="@+id/main_scr_b3"
        android:layout_width="311dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bottons_of_main_screen"
        android:text="@string/nutrition_plan"
        android:textSize="22sp"
        app:fontFamily="@font/archivo_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_scr_b2" />

</androidx.constraintlayout.widget.ConstraintLayout>